# Rabbit

./: .gitignore  CMakeLists.txt  README.md
kernel/: camera.h  initialisation.cl  intersect.cl  kernel_common.h  rendering_kernel.cl  restart.cl  sphere.h
scenes/: base_scene.txt  scene_format.txt  simple_4.txt
source/: Main.cpp  main.cpp
source/cl/: CLError.cpp  CLError.hpp  CLProgram.cpp  CLProgram.hpp
source/rendering/: Camera.cpp  Camera.hpp  RenderingContext.cpp  RenderingContext.hpp  RenderingData.cpp  RenderingData.hpp  RenderingKernels.cpp  RenderingKernels.hpp  TileDescription.hpp  TileRendering.cpp  TileRendering.hpp  TileRenderingContext.cpp  TileRenderingContext.hpp  TracingData.cpp  TracingData.hpp
source/scene/: Scene.cpp  Scene.hpp  SceneParser.cpp  SceneParser.hpp
source/utilities/: CLError.cpp  CLError.hpp  Common.hpp  FileIO.cpp  FileIO.hpp  OpenCLInclude.hpp  Vector.hpp
